--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang = "en">
 <head>
-<title>
-My First Page
-</title>
+<title> Geethika　Kumarisinghe's personal web site </title>
 </head>
-<body>
+<body bgcolor = "gray">
+  <div style = "background-image:url(geethzin.jpg)"
 <h1> Hello !  </h1>
 </body>
 </html>
