--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title> Geethika　Kumarisinghe's personal web site </title>
 </head>
 <body bgcolor = "gray">
-  <div style = "background-image:url:geethzin.jpg">
+  <div style = "background-image(url:geethzin.jpg)">
   </div>
 <h1> Hello !  </h1>
 </body>
