--- a/University life.html
+++ b/University life.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 
-<link rel="stylesheet" media="(min-width: 640px)" href="style.css">
+<link rel="stylesheet" media="(min-width: 640px)" href="all_pc.css">
 
 
 </head>
