--- a/hometown.html
+++ b/hometown.html
@@ -28,7 +28,10 @@
 	</header>
 
 	<div class="container" style="height: 450px;">
-	<div><img src="img/wlcome.jpg" alt="Welcome" width = "860" height ="450"> </div>
+	<div>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15853.781453726404!2d80.07998941891736!3d6.591435389688999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae234c8cb7f5fad%3A0x170af881d88af930!2sNeboda%2C%20Sri%20Lanka!5e0!3m2!1sen!2sjp!4v1573995115986!5m2!1sen!2sjp" width="860" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+				</div>
 
 	</div>
 	
