--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,13 @@
-
 <html>
 <head>
 <meta charset="UTF-8">
 
-
+<link rel="stylesheet" media="(min-width: 640px)" href="style.css">
 
 
 </head>
 
-<body style="background-image:url(img/67Z.jpg);">
-<div id="pagebody" style="height: 780px;">
+<body style="background-image:url(img/67Z.jpeg);">
 <div id="pagebody" style="height: 780px;">
 <div class="container" style="height: 150px;">
 <img src="img/header.png" alt="header" width = "860" height ="140">
